fixed line spacing for search result headers, resolves #298"

--- a/public/stylesheets/screen.css
+++ b/public/stylesheets/screen.css
@@ -2678,6 +2678,13 @@ div.wysiwyg ul li {
       overflow: hidden;
       width: 768px;
     }
+    .search #content ul.results li h2 {
+      line-height: 1.3;
+      padding-bottom: 5px;
+      padding-right: 28px;
+      padding-top: 5px;
+      width: 311px;
+    }
     .search #content ul.results li div.header:hover h2 {
       text-decoration: underline;
     }
